--- a/src/main/webapp/webpages/index.xhtml
+++ b/src/main/webapp/webpages/index.xhtml
@@ -4,39 +4,45 @@
 >
 
 <h:head>
-    <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.0/primeflex.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
 </h:head>
 
 <h:body>
     <h:form id="listar_meals_form">
-        <p:dataTable value="#{mealBean.listaMeals}"
-                     var="meal"
-                     id="listar_meals_datatable">
-            <p:column>
-                <img src="#{meal.strMealThumb}" alt="#{meal.strMeal}"/>
-            </p:column>
-            <p:column headerText="Nome"
-                      id="nome">
-                <p:commandButton id="visualizar_meal"
-                                 ajax="false"
-                                 value="#{meal.strMeal}"
-                                 action="#{mealBean.visualizarMeal(meal.idMeal)}"
-                                 update=":visualizar_meal_form"
-                                 process="@this"/>
-            </p:column>
-            <p:column headerText="Categoria"
-                      id="categoria">
-                <h:outputText value="#{meal.strCategory}"/>
-            </p:column>
-            <p:column headerText="Área"
-                      id="area">
-                <h:outputText value="#{meal.strArea}"/>
-            </p:column>
-            <p:column headerText="Instruções"
-                      id="instrucoes">
-                <h:outputText value="#{meal.strInstructions}"/>
-            </p:column>
-        </p:dataTable>
+        <div class="container-xl">
+            <p:dataTable value="#{mealBean.listaMeals}"
+                         var="meal"
+                         id="listar_meals_datatable"
+                         paginator="true"
+                         rows="10">
+                <p:column>
+                    <img src="#{meal.strMealThumb}" class="img-fluid" alt="#{meal.strMeal}"/>
+                </p:column>
+                <p:column headerText="Nome"
+                          id="nome">
+                    <p:commandButton id="visualizar_meal"
+                                     ajax="false"
+                                     value="#{meal.strMeal}"
+                                     action="#{mealBean.visualizarMeal(meal.idMeal)}"
+                                     update=":visualizar_meal_form"
+                                     process="@this"/>
+                </p:column>
+                <p:column headerText="Categoria"
+                          id="categoria">
+                    <h:outputText value="#{meal.strCategory}"/>
+                </p:column>
+                <p:column headerText="Área"
+                          id="area">
+                    <h:outputText value="#{meal.strArea}"/>
+                </p:column>
+                <p:column headerText="Instruções"
+                          id="instrucoes">
+                    <div class="overflow-hidden">
+                        <h:outputText value="#{mealBean.reduzirTexto(meal.strInstructions)}"/>
+                    </div>
+                </p:column>
+            </p:dataTable>
+        </div>
     </h:form>
 </h:body>
 </html>
